--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Lupita Typing - Phaser Version</title>
+    <title>La Aventura Mágica de Lupita</title>
     <style>
         @font-face {
             font-family: 'Press Start 2P';
