--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>La Aventura Mágica de Lupita</title>
+    <title>Magic Typing</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
         @font-face {
             font-family: 'Press Start 2P';
